[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquickjs"
version = "0.1.0"
description = "Pure Python port of the QuickJS JavaScript engine"
requires-python = ">=3.10"
dependencies = [
    "regex>=2026.2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["pyquickjs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
