[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyquickjs"
version = "0.1.0"
description = "Pure Python port of the QuickJS JavaScript engine"
authors = []
readme = "README.md"
license = "Unlicense"
packages = [{ include = "pyquickjs" }]

[tool.poetry.dependencies]
python = ">=3.10"
regex = ">=2024.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
